--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 38.86.135.27, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林), server: 213.183.53.208, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 波兰-1.37MB/s(Youtube:不良林), server: 217.30.10.63, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 保加利亚-501.0KB/s(Youtube:不良林), server: 213.183.63.218, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇫🇷 法国-2.64MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: 38.64.138.145, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇳🇱 荷兰-2.55MB/s(Youtube:不良林), server: 213.183.59.229, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇺🇸 美国-3.92MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 保加利亚-501.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 保加利亚-501.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 保加利亚-501.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 保加利亚-501.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 保加利亚-501.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 保加利亚-501.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 保加利亚-501.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
