--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-501.0KB/s(Youtube:不良林), server: 213.183.63.218, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇫🇷 法国-2.64MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: 38.64.138.145, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇳🇱 荷兰-2.55MB/s(Youtube:不良林), server: 213.183.59.229, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇺🇸 美国-3.92MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.208, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇩🇪 德国-2.64MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-2.63MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-280.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-192.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-501.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-501.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-501.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-501.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-501.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-501.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-501.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
