--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.03MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.76MB/s(Youtube:不良林), server: 213.183.53.208, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇳🇱 荷兰-2.46MB/s(Youtube:不良林), server: 213.183.59.229, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 波兰-888.3KB/s(Youtube:不良林), server: 217.30.10.66, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 波兰-1.19MB/s(Youtube:不良林), server: 217.30.10.68, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇦 加拿大-1.80MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-1.85MB/s(Youtube:不良林), server: 213.183.59.229, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇫🇷 法国-2.64MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇩🇪 德国-1.79MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.46MB/s(Youtube:不良林)
+      - 波兰-888.3KB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.46MB/s(Youtube:不良林)
+      - 波兰-888.3KB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.46MB/s(Youtube:不良林)
+      - 波兰-888.3KB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.46MB/s(Youtube:不良林)
+      - 波兰-888.3KB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.46MB/s(Youtube:不良林)
+      - 波兰-888.3KB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.46MB/s(Youtube:不良林)
+      - 波兰-888.3KB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.46MB/s(Youtube:不良林)
+      - 波兰-888.3KB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
